Fix an issue with modals and z-index problems
In this case, the modal was attached to the sticky header of the page.
The sticky header had a z-index of 1, which overrode the z-index of the
modal, allowing the modal backdrop to appear above everything.

The only solution was to make the assessment-selection controller cover
the entire page so that the modal dialogue could be made a top-level
element.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,14 +194,15 @@ td {
   table-layout: fixed;
 }
 
+.stick-to-top {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+}
+
 .full-width {
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
-  &.sticky {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-  }
 }
 
 .was-validated .form-control:invalid,
